// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Textarea component should be disabled with placeholder and value 1`] = `
<textarea
  className="textarea"
  disabled={true}
  placeholder="hello tests"
  readOnly={false}
  rows={4}
  value="TEST"
/>
`;

exports[`Textarea component should be large with 10 rows and readOnly 1`] = `
<textarea
  className="textarea is-large"
  disabled={false}
  readOnly={true}
  rows={10}
/>
`;

exports[`Textarea component should concat classname in props with Bulma classname 1`] = `
<textarea
  className="textarea other-class this-is-a-test"
  disabled={false}
  readOnly={false}
  rows={4}
/>
`;

exports[`Textarea component should exist 1`] = `
Object {
  "$$typeof": Symbol(react.forward_ref),
  "defaultProps": Object {
    "disabled": false,
    "readOnly": false,
    "rows": 4,
  },
  "render": [Function],
}
`;

exports[`Textarea component should have textarea classname 1`] = `
<textarea
  className="textarea"
  disabled={false}
  readOnly={false}
  rows={4}
/>
`;

exports[`Textarea component should use inline styles 1`] = `
<textarea
  className="textarea"
  disabled={false}
  readOnly={false}
  rows={4}
  style={
    Object {
      "height": 250,
    }
  }
/>
`;
